# hardware-wallet-api

./: .gitignore  Cargo.toml
js/: trezor-webusb-plugin.js
src/: lib.rs
src/trezor_api/: Cargo.toml  build.rs
src/trezor_api/src/: client.rs  lib.rs  messages.rs
src/trezor_api/src/protos/: messages_tezos.rs  mod.rs
src/trezor_api/src/transport/: error.rs  mod.rs  protocol.rs  udp.rs  usb.rs  webusb.rs
wasm_build/: index.html  index.js  package-lock.json  package.json  webpack.config.js
